# sky

sky-travel/: Makefile  Makefile.in  config.h  config.status  configure  sky-travel.glade.bak
sky-travel/autom4te.cache/: output.0  requests  traces.0  traces.1
sky-travel/po/: Makefile  Makefile.in
sky-travel/src/: Makefile  Makefile.am  Makefile.in  admin.txt  afficheragent.c  afficheragent.h  afficherevaluation.c  afficherevaluation.h  affichervoiture.c  affichervoiture.h  agent.txt  ajoutagent.c  ajoutagent.h  ajoutvoiture.c  callbacks.c  callbacks.h  client.txt  code.c  code.h  code.txt  evaluation.txt  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  main.c  sky-travel  voiture.c  voiture.h  voiture.txt  voitures.txt  vol.c  vol.h  vol.txt  vols.c  vols.h  vols.txt  vols_reserver.txt
sky-travel/src/.deps/: afficheragent.Po  afficherevaluation.Po  affichervoiture.Po  ajoutagent.Po  callbacks.Po  code.Po  voiture.Po  vol.Po  vols.Po
